--- a/React/public/game.html
+++ b/React/public/game.html
@@ -25,6 +25,7 @@
           <p id="saved-points-line" style="display: none">
             Saved Points [p]: <span id="unspent-points">0</span>
           </p>
+          <p>Score: <span id="current-score">0</span></p>
           <p>Attack [space]: <span id="attack-range">2-12</span></p>
           <p>Dodge Chance: <span id="dodge-chance">0%</span></p>
         </div>
