Pulled score from game into component

--- a/React/public/game.html
+++ b/React/public/game.html
@@ -17,7 +17,7 @@
           <p>
             HP: <span id="current-hp">100</span> / <span id="max-hp">100</span>
           </p>
-          <p>Potions [e]: <span id="current-potions">0</span></p>
+          <p>Potions [r]: <span id="current-potions">0</span></p>
           <p>
             XP: <span id="current-xp">0</span> / <span id="needed-xp">50</span>
           </p>
@@ -26,7 +26,7 @@
             Saved Points [p]: <span id="unspent-points">0</span>
           </p>
           <p>Score: <span id="current-score">0</span></p>
-          <p>Attack [space]: <span id="attack-range">2-12</span></p>
+          <p>Attack [e]: <span id="attack-range">2-12</span></p>
           <p>Dodge Chance: <span id="dodge-chance">0%</span></p>
         </div>
         <div id="enemy-info">
