updated paths for assets to public for eease of use with Netlify

--- a/public/game.html
+++ b/public/game.html
@@ -10,7 +10,7 @@
     <div class="game-wrapper">
       <div id="left-sidebar">
         <div id="character-portrait">
-          <img src="../src/assets/gamer1.jpg" alt="Character Portrait" />
+          <img src="./assets/gamer1.jpg" alt="Character Portrait" />
         </div>
         <div id="enemy-portrait">
           <img id="enemy-image" src="" alt="Enemy Portrait" />
