--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./public/Calmuck_Skull_(Side).png"
-    />
+    <link rel="icon" type="image/png" href="./Calmuck_Skull_(Side).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dungeon Delve</title>
   </head>
