--- a/public/game.html
+++ b/public/game.html
@@ -18,7 +18,7 @@
         <div id="instructions">
           <h3>Instructions</h3>
           <p>Use W, A, S, D to move.</p>
-          <p>Press R to use a potion.</p>
+          <p>Press R to heal with a potion.</p>
           <p>Press E to attack.</p>
         </div>
       </div>
@@ -33,13 +33,13 @@
             HP: <span id="current-hp">100</span> / <span id="max-hp">100</span>
             <button id="increase-hp" class="increase-stat-btn" onclick="increaseStat('hp')">+</button>
           </p>
-          <p>Potions [r]: <span id="current-potions">0</span></p>
+          <p>Potions: <span id="current-potions">0</span></p>
           <p>
             XP: <span id="current-xp">0</span> / <span id="needed-xp">50</span>
           </p>
           <p>Level: <span id="current-level">1</span></p>
           <p>Score: <span id="current-score">0</span></p>
-          <p>Attack [e]: <span id="attack-range">2-12</span>
+          <p>Attack: <span id="attack-range">2-12</span>
             <button id="increase-attack" class="increase-stat-btn" onclick="increaseStat('attack')">+</button>
           </p>
           <p>Dodge Chance: <span id="dodge-chance">0%</span>
