boss moves and fights

--- a/public/game.html
+++ b/public/game.html
@@ -19,7 +19,7 @@
           <h3>Instructions</h3>
           <p>Use W, A, S, D to move.</p>
           <p>Press R to heal with a potion.</p>
-          <p>Press E to attack.</p>
+          <p>Press E to attack or enter next floor.</p>
         </div>
       </div>
       <canvas id="gameCanvas" width="400" height="400"></canvas>
