--- a/public/game.html
+++ b/public/game.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <img src="./warlord-helmet.png" alt="player" class="player-icon" />
+    <img src="./warlord-helmet.png" alt="player" class="icon" />
+    <img src="./crowned-skull.png" alt="boss" class="icon" />
+    <img src="./stairs-25.png" alt="stairs" class="icon" />
     <div class="game-wrapper">
       <div id="left-sidebar">
         <div id="character-portrait">
