--- a/public/game.html
+++ b/public/game.html
@@ -82,6 +82,6 @@
         </div>
       </div>
     </div>
-    <script src="game.js"></script>
   </body>
+  <script src="game.js" class="game"></script>
 </html>
