--- a/public/game.html
+++ b/public/game.html
@@ -77,7 +77,7 @@
           <p>Enemy HP: <span id="enemy-hp">N/A</span></p>
         </div>
         <div id="combat-log">
-          <h3>Combat Log</h3>
+          <h3>Action Log</h3>
           <ul id="log"></ul>
         </div>
       </div>
