--- a/public/game_html.html
+++ b/public/game_html.html
@@ -9,6 +9,7 @@
   <body>
     <img src="./warlord-helmet.png" alt="player" class="icon" />
     <img src="./crowned-skull.png" alt="boss" class="icon" />
+    <img src="./heart-bottle.png" alt="potion" class="icon" />
     <img src="./stairs-25.png" alt="stairs" class="icon" />
     <div class="game-wrapper">
       <div id="left-sidebar">
